--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,7 @@
         padding-bottom: 50px;
         padding-left: 12px;
         padding-right: 12px;
+        overflow-x: hidden;
     }
 
     a {
