[About Page] Dropdown menus transparent panel
Original panels were opaque - would cause visible errors if used in uxblock or otherwise

--- a/styles.css
+++ b/styles.css
@@ -595,7 +595,7 @@ svg:active .bttSVGrect2{
 
  /*/Footer Classes*/
 
- /*Accordian Dropdown Classes*/
+ /*Accordion Dropdown Classes*/
 .accordion-flex {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -656,7 +656,7 @@ svg:active .bttSVGrect2{
 
  .accordion {
     color: #B5DFE0;
-    background-color: #212121;
+    background-color: #21212100;
     cursor: pointer;
     padding: 0em 0em 1em 0em;
     width: 100%;
@@ -680,7 +680,7 @@ svg:active .bttSVGrect2{
 /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 0px;
-    background-color: #212121;
+    background-color: #21212100;
     display: none;
     overflow: hidden;
     transition: 0.6s;
