[Case Study Page] Sticky Nav fix
Sticky position fails when overflow-x: hidden exists on parent nav - media query included on desktop to remedy this

--- a/styles.css
+++ b/styles.css
@@ -434,6 +434,10 @@
     }
   
     @media only screen and (min-width: 1020px) {
+        #bodyContent {
+            overflow-x: visible;
+        }
+
         .designLink {
             text-decoration: none;
             color: #fff;
