--- a/styles.css
+++ b/styles.css
@@ -583,7 +583,7 @@ svg:active .bttSVGrect2{
     position: absolute;
     align-content: flex-end;
     display: flex;
-    top: 18px;
+    top: 14px;
     right: 12px;
 }
 
@@ -778,4 +778,8 @@ svg:active .bttSVGrect2{
 
 body {
     -webkit-tap-highlight-color: rgba(1, 1, 1, 0);
+}
+
+footer p {
+    line-height: 0.5em;
 }
