--- a/styles.css
+++ b/styles.css
@@ -62,21 +62,53 @@
 
         .homeIcon {
             display: block;
-            position: relative;
-            top: 10px;
+            position: absolute;
             width: 18px;
-            margin: 0px 0px 0px 10px;
-            float: left;
+            margin: auto;
             z-index: 5;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%), scale(1.5);
         }
 
-        /*.homeIconSVGPath {
-            fill: #fff;
+        .homeIcon::before {
+            content: "";
+            cursor: pointer;
+            display: block;
+            opacity: 1;
+            position: absolute;
+            background-image: linear-gradient(to right, var(--accent-color), var(--accent-color));
+            background-position: center;
+            transition: 0.3s ease;
+            z-index: -1;
+            width: 0px;
+            height: 50px;
+            top: 0%;
+            left: 50%;
+            transform: translate(-50%, -75%);
+            border-radius: 50px;
+            margin: 0px auto 0px auto;
         }
 
-        .homeIconSVGPath:hover {
-            fill: var(--bg-color);
-        }*/
+        .homeIcon:hover::before {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            transition: 0.3s ease;
+        }
+
+        body:has(.switch__input:checked) .homeIcon::before {
+            content: "";
+            cursor: pointer;
+            display: block;
+            opacity: 1;
+            position: absolute;
+            background-image: linear-gradient(to right, var(--DMaccent-color), var(--DMaccent-color));
+        }
+
+        .homeIconSVGPath {
+            fill: var(--text-color);
+        }
 
         .navWrapper {
             align-self: right;
@@ -348,18 +380,57 @@
         cursor: pointer;
     }
 
-    .designLink {
-        text-decoration: underline;
-        color: var(--bg-color);
+    body:has(.switch__input:checked)  a:hover {
+        color: inherit;
     }
+
+    .designLink {
+        position: relative;
+        overflow: visible;
+        color: var(--text-color);
+    }
+
+    .designLink::before {
+            content: "";
+            cursor: pointer;
+            display: block;
+            opacity: 1;
+            position: absolute;
+            background-image: linear-gradient(to right, var(--accent-color), var(--accent-color));
+            background-position: center;
+            transition: 0.3s ease;
+            z-index: -1;
+            width: 0px;
+            height: 0px;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            border-radius: 50px;
+            margin: 0px auto 0px auto;
+        }
+
+    .designLink:hover::before {
+            width: 150%;
+            height: 150%;
+            border-radius: 50px;
+            transition: 0.3s ease;
+        }
+
+    body:has(.switch__input:checked) .designLink {
+        color: var(--accent-color);
+    }
+
+    body:has(.switch__input:checked) .designLink::before {
+             background-image: linear-gradient(to right, var(--DMaccent-color), var(--DMaccent-color))
+        }
 
     .bodyLink {
         text-decoration: underline;
-        color: var(--bg-color);
+        color: var(--text-color);
     }
 
     .bodyLink:visited {
-        color: #f0f0f0;
+        color: hsl(from var(--text-color) h s calc(1 + 25));
         text-decoration: underline;
     }
 
@@ -529,12 +600,6 @@
 
         .designLink {
             text-decoration: none;
-            color: #fff;
-        }
-
-        .designLink:hover {
-            text-decoration: underline;
-            color: var(--bg-color);
         }
 
         .gridContainer {
@@ -587,7 +652,23 @@
     margin: 3em auto 0em auto;
 }
 
-.bttSVGpath {
+.btt-btn path {
+   fill: var(--text-color);
+}
+
+.btt-btn rect {
+    fill: var(--text-color);   
+}
+
+body:has(.switch__input:checked) .btt-btn path {
+   fill: var(--accent-color);
+}
+
+body:has(.switch__input:checked) .btt-btn rect {
+    fill: var(--accent-color);   
+}
+
+/*.bttSVGpath {
     fill: rgb(1,1,1);
     filter: brightness(1000);
 }
@@ -626,7 +707,7 @@ svg:active .bttSVGrect2{
     svg:hover .bttSVGrect2{
         filter: invert(12%) sepia(97%) saturate(3265%) hue-rotate(333deg) brightness(74%) contrast(111%);
     }
-}
+}*/
 /*/ Close Selective Hover State for SVG*/
 
 /*Footer Classes*/
@@ -703,7 +784,7 @@ body:has(.switch__input:checked) .admintext::before {
 }
 
 .icon {
-    fill: #ffffff;
+    fill: var(--text-color);
 }
 
 .icon:hover {
